--- a/bohn html-css/estilos.css
+++ b/bohn html-css/estilos.css
@@ -23,7 +23,7 @@
     background-image: linear-gradient(to left, #EFEEEE, #c7c7c4);
     /* background-color: #c7c7c4; */
     opacity: 0.9;
-    height: 150px;
+    height: 40px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -34,14 +34,15 @@
     top: 0;
     left: 0;
     z-index: 100;
-    padding: 100px;
+    padding: 70px;
+    font-family: 'Poppins';
+    font-size: 20px;
     
 }
 /* logo */
 .header img {
-    width: 280px; 
-    /* margin-right: 10px;  */
-    justify-content: center;
+    width: 190px; 
+    /* justify-content: center; */
   }
 
 /* navigation bar */
@@ -51,21 +52,79 @@
   /* background-color: #8e99a6; */
   /* color: #EFEEEE; */
 }
+.header .nav .ul-nav {
+  justify-content: center;
+  /* align-items: center; */
+  margin: 20px;
+}
+
+.header .nav .treatments-nav .treatments-list{
+  display: none;
+  position: relative;
+  /* top: 100%; */
+  left: 0;
+  background-color: #af994d;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4);
+}
+.header .nav .promos-convenios .promos-list {
+  display: none;
+  position: relative;
+  /* top: 100%; */
+  left: 0;
+  background-color: #af994d;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4);
+}
+.header .nav .treatments-nav .treatments-list.show {
+  display: block;
+}
+.header .nav .promos-convenios .promos-list.show {
+  display: block;
+}
+
 .nav ul {
   display: flex;
   list-style: none;
-  margin: 0;
-  padding: 0;
+  padding: 5px;
 }
 .nav li {
   margin-right: 20px;
 }
-.nav a {
-  color: #ca0808;
+.nav a, .ul a {
+  color: #333;
   text-decoration: none;
 }
+
 .nav a:hover {
-  text-decoration: underline;
+  font-size: 22px;
+  /* font-weight: bold; */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+/* header in small screns */
+.menu-icon {
+  cursor: pointer;
+  /* display: block; */
+}
+.menu-icon svg {
+  position: relative;
+  top: 80px;
+  right: 20px;
+  /* z-index: 101; */
+   /* Asegura que esté por encima del contenido */
+  width: 40px;
+  /* height: 3px; */
+  /* background-color: #333; */
+  /* margin: 6px auto; */
+}
+  
+.ul-nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
   /* titulos y secciones */
@@ -206,6 +265,74 @@
 }
 
 /* responsive */
+/* hamburguer menu - bigger than 1101 px screens */
+@media screen and (min-width: 1201px) {
+  .menu-icon {
+    display: none;
+  }
+  .ul-nav {
+    display: flex;
+    justify-content: space-around;
+    /* width: 100%; */
+  }  
+}
+/* small or equal screens than 1100px */
+@media screen and (max-width: 1200px) { 
+  .ul-nav {
+    /* display: none; */
+    flex-direction: column;
+    /* justify-content: center; */
+    /* align-items: center; */
+    /* display: none; */
+    /* position: absolute; */
+    background-color: #af994d;
+    /* padding: 10px; */
+    /* margin: 10px; */
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4);
+    font-size: medium;
+  }
+  .ul-nav.show {
+    display: flex;
+  }
+  .header .nav .ul-nav {
+    align-items:flex-start;
+  }
+  .menu-icon {
+    opacity: 0.9;
+  }
+  .menu-icon svg {
+    background-color: #af994d; 
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4);
+  }
+  .nav a:hover {
+    font-size: 19px;
+    /* font-weight: bold; */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  }
+  .treatments-list {
+    display: none;
+    background-color: #af994d;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4);
+    padding: 10px;
+    list-style: none;
+  }
+  .treatments-list li {
+    margin-bottom: 10px;
+  }
+  .treatments-nav.ul-nav.show .submenu-container {
+    display:block;
+    background-color: #af994d;
+    position: relative;
+    /* left: 50px; */
+    border-radius: 10px; 
+  } 
+}
+
+
+/* grid img */
 @media (max-width: 1024px) {
     .treatments .content-section {
       grid-template-columns: repeat(2, 1fr);
@@ -223,7 +350,6 @@
     }
      */
   }
-
   @media (max-width: 500px) {
     .treatments .content-section {
       grid-template-columns: 1fr;
@@ -231,49 +357,11 @@
     /* .treatments .treatment-item:hover {
       width: 280px;
     } */
-    
   }
 
+  /* footer */
   @media screen and (max-width:800px){
     .contact-information .content-section .row{
       display: block;
   }
 }
-    /* 
-   
-    .skills .content-section .row{
-        display: block;
-    }
-    .skills .content-section .row .col {
-        width: 100%;
-        text-align: center;
-    }
-    .skills .content-section .row .col .bar-content{
-        justify-content: center;
-    }
-    .aboutme .content-section .row {
-        display: block;
-    }
-    .aboutme .content-section .row .col {
-        width: 100%;
-        margin: auto;
-        margin-top: 20px;
-    } 
-    .resume .content-section .info .col{
-        width: 90%;
-        margin: auto;
-    }
-    .resume .content-section .info .col .title{
-        width: 100%;
-        text-align: center;
-    }
-    .resume .content-section .info .col table{
-        margin-top: 10px;
-        margin-bottom: 30px;
-    } 
-        */
-
-
-
-
-
