--- a/bohn html-css/estilos.css
+++ b/bohn html-css/estilos.css
@@ -1,9 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;1,200;1,400&display=swap');
 
-/* html {
-  scroll-behavior: smooth;
-} */
-
 .background-container {
   position: fixed;
   top: 0;
@@ -197,9 +193,11 @@ div.header-icons img {
   text-align: center;
   font-size: 25px;
   padding: 10px;
+  margin: 50px 0;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4);
   border-radius: 10px;
 }
+
 
 /* body - container treatments */
 .treatments {
@@ -218,7 +216,6 @@ div.header-icons img {
   cursor: pointer;
   margin-top: 10px;
   margin-bottom: 50px;
-  /* transition: width 3s; */
 }
 .treatments .treatment-item img {
   width: 100%;
@@ -229,66 +226,52 @@ div.header-icons img {
 }
 
 /* buttons */
-.treatments .treatment-buttons:hover {
-  background-color: #c7c7c4;
-}
 .treatments .treatment-buttons {
   background-color: #af994d;
   position: absolute;
-  bottom: -50px;
+  bottom: -47px;
   left: 0;
   right: 0;
   padding: 10px;
   text-align: center;
   transition: background-color 1s ease;
   border-radius: 10px;
-  /* border: 2px solid #c7c7c4; */
-  /* width: 95%; */
-}
-.treatments .treatment-buttons a {
-  color: white;
-  text-decoration: none;
-  font-weight: 600;
-  font-family: 'Poppins';
-  font-size: 20px;
-}
-.treatments .treatment-buttons-two:hover {
-  background-color: #c7c7c4;
 }
 .treatments .treatment-buttons-two {
   position: absolute;
-  bottom: -105px;
+  bottom: -99px;
   left: 0;
   right: 0;
   background-color: #af994d;
   padding: 10px;
   text-align: center;
-  /* opacity: 1; */
   transition: background-color 1s ease;
   border-radius: 10px;
-  /* border: 2px solid #c7c7c4; */
-    /* margin-top: 50px; */
 }
-.treatments .treatment-buttons-two a {
+.treatments .treatment-buttons a, .treatment-buttons-two a {
   color: white;
   text-decoration: none;
   font-weight: 600;
   font-family: 'Poppins';
   font-size: 20px;
 }
+.treatments .treatment-buttons:hover, .treatment-buttons-two:hover {
+  background-color: #c7c7c4;
+}
+
   
 /* footer */
 .contact-information{
     font-family: 'Poppins';
-    /* margin-top: 80px; */
-    background-color: rgba(107, 104, 93, 0.8); 
+    background-image: linear-gradient(to top, rgba(107, 104, 93, 0.8), #8e99a6);
     padding: 10px 0 50px 0;
+    border-radius: 10px;
     color: #EFEEEE;
     text-align: center;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
 }
 .contact-information .content-section{
-    max-width: 1000px;
+    /* max-width: 100%; */
     margin: auto;
     padding: 5 10px;
 }
@@ -302,7 +285,7 @@ div.header-icons img {
     justify-content: space-around;
 }
 .contact-information .content-section .row .col{
-    margin-top: 50px;
+    margin-top: 20px;
 }
 .contact-information .content-section .row .col h2{
     color: rgba(19, 18, 18, 0.849);
@@ -373,6 +356,19 @@ div.header-icons img {
     font-size: 19px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   } 
+  .treatments .treatment-buttons a, .treatment-buttons-two a {
+    font-size: medium;
+  }
+  .treatments .treatment-buttons {
+    bottom: -42px;
+  }
+  .treatments .treatment-buttons-two {
+    bottom: -90px;
+  }
+  .title {
+    margin: 40px 0px;
+  }
+
 }
 /* reduccion de tamaño y alineado en pantallas menores a 370px */
 @media screen and (max-width: 370px) {
