--- a/bohn html-css/estilos.css
+++ b/bohn html-css/estilos.css
@@ -18,6 +18,7 @@
 .header {
     background-image: linear-gradient(to bottom, rgba(107, 104, 93, 0.8), #8e99a6);
     width: 100%;
+    height: 160px;
     display: flex;
     align-items: center;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4);
@@ -109,16 +110,21 @@
 /* header-icons */
 .header-icons {
   display: flex;
-  cursor: pointer; 
+  cursor: pointer;
+  margin-right: 10px; 
 }
 .header-icons img {
   margin-left: 20px;
   vertical-align: middle;
+  width: 32px;
+  height: 32px;
+
 }
 
 /* WELCOME SECTION */
 .welcome-section {
   margin-top: 180px;
+  padding: 20px;
   margin-left: 10px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -404,9 +410,14 @@
     grid-template-columns: repeat(2, 1fr);
   }
 }
-@media (max-width: 600px) {   .treatments .content-section {
+@media (max-width: 600px) {
+  .treatments .content-section {
       grid-template-columns: 2fr;
-    }
+  }
+  .header-icons img {
+    width: 25px;
+    height: 25px;
+  }
 }
 @media (max-width: 500px) {   .treatments .content-section {
       grid-template-columns: 1fr;
